2007-05-23  Bruno coudoin  <bruno.coudoin@free.fr>

	- major packaging change, imported libart_lgpl and libgnomecanvas
	  from gnome svn (trunk). We now build them as static library.
	  Packager change, you no more need them in GCompris require's.

	* INSTALL:
	* configure.in:
	* install-sh:
	* src/Makefile.am:
	* src/gcompris/Makefile.am:
	* src/gcompris/gcompris.c: (main):
	* src/gcompris/soundutil.c: (fx_play):
	* src/libart_lgpl/AUTHORS:
	* src/libart_lgpl/COPYING:
	* src/libart_lgpl/ChangeLog:
	* src/libart_lgpl/Makefile:
	* src/libart_lgpl/Makefile.am:
	* src/libart_lgpl/Makefile.in:
	* src/libart_lgpl/NEWS:
	* src/libart_lgpl/README:
	* src/libart_lgpl/README.CVS:
	* src/libart_lgpl/art_affine.c: (art_affine_point),
	(art_affine_invert), (art_affine_flip), (art_ftoa),
	(art_affine_to_string), (art_affine_multiply),
	(art_affine_identity), (art_affine_scale), (art_affine_rotate),
	(art_affine_shear), (art_affine_translate), (art_affine_expansion),
	(art_affine_rectilinear), (art_affine_equal):
	* src/libart_lgpl/art_affine.h:
	* src/libart_lgpl/art_alphagamma.c: (art_alphagamma_new),
	(art_alphagamma_free):
	* src/libart_lgpl/art_alphagamma.h:
	* src/libart_lgpl/art_bpath.c: (art_bpath_affine_transform):
	* src/libart_lgpl/art_bpath.h:
	* src/libart_lgpl/art_filterlevel.h:
	* src/libart_lgpl/art_gray_svp.c: (art_gray_svp_callback),
	(art_gray_svp_aa):
	* src/libart_lgpl/art_gray_svp.h:
	* src/libart_lgpl/art_misc.c: (art_die), (art_warn), (art_dprint),
	(art_alloc), (art_free), (art_realloc):
	* src/libart_lgpl/art_misc.h:
	* src/libart_lgpl/art_pathcode.h:
	* src/libart_lgpl/art_pixbuf.c: (art_pixbuf_new_rgb_dnotify),
	(art_pixbuf_new_rgba_dnotify), (art_pixbuf_new_const_rgb),
	(art_pixbuf_new_const_rgba), (art_pixel_destroy),
	(art_pixbuf_new_rgb), (art_pixbuf_new_rgba), (art_pixbuf_free),
	(art_pixbuf_free_shallow), (art_pixbuf_duplicate):
	* src/libart_lgpl/art_pixbuf.h:
	* src/libart_lgpl/art_point.h: